--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>app</groupId>
 	<artifactId>Hazelcast</artifactId>
@@ -27,6 +27,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<version>3.2.3</version> <!-- Use the correct version -->
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -66,3 +72,15 @@
 		</plugins>
 	</build>
 </project>
+<hazelcast-client xmlns="http://www.hazelcast.com/schema/client-config"
+				  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+				  xsi:schemaLocation="http://www.hazelcast.com/schema/client-config
+                  http://www.hazelcast.com/schema/client-config/hazelcast-client-config-5.0.xsd">
+<cluster-name>dev</cluster-name>
+<network>
+	<cluster-members>
+		<address>127.0.0.1:5701</address>
+		<address>127.0.0.2:5702</address>
+	</cluster-members>
+</network>
+</hazelcast-client>
